--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en"> 
   <head> 
       <meta charset="UTF-8" />
+
+      <meta property="og:type" content="website">
+      <meta property="og:title" content="Just Another Farming Sim" />
+      <meta property="og:description" content="This is a very early demo of my farming game made in Phaser 3" />
+      <meta property="og:url" content="https://christian-post.github.io/just-another-farming-sim/" />
+      <meta property="og:image" content="assets/images/other/thumbnail.png" />
+
       <title>Just Another Farming Sim</title>
       <!-- EXTERNAL LIBRARIES -->
       <script src="phaser/phaser.js"></script>
