--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta property="og:title" content="Just Another Farming Sim" />
       <meta property="og:description" content="This is a very early demo of my farming game made in Phaser 3" />
       <meta property="og:url" content="https://christian-post.github.io/just-another-farming-sim/" />
-      <meta property="og:image" content="https://raw.githubusercontent.com/christian-post/just-another-farming-sim/main/assets/images/other/thumbnail.png" />
+      <meta property="og:image" content="https://github.com/christian-post/just-another-farming-sim/blob/main/assets/images/other/thumbnail.png?raw=false" />
 
       <title>Just Another Farming Sim</title>
       <!-- EXTERNAL LIBRARIES -->
