--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
       <meta property="og:type" content="website">
       <meta property="og:title" content="Just Another Farming Sim">
       <meta property="og:description" content="This is a very early demo of my farming game made in Phaser 3">
-      <meta property="og:image" content="assets/images/other/thumbnail.png">
-      <!-- <meta property="og:image" content="https://github.com/christian-post/just-another-farming-sim/blob/main/assets/images/other/thumbnail.png?raw=false"> -->
+      <meta property="og:image" content="https://github.com/christian-post/just-another-farming-sim/blob/main/assets/images/other/thumbnail.png?raw=false">
 
       <!-- Twitter Meta Tags -->
       <meta name="twitter:card" content="summary_large_image">
@@ -19,8 +18,7 @@
       <meta property="twitter:url" content="https://christian-post.github.io/just-another-farming-sim/">
       <meta name="twitter:title" content="Just Another Farming Sim">
       <meta name="twitter:description" content="This is a very early demo of my farming game made in Phaser 3">
-      <meta name="twitter:image" content="assets/images/other/thumbnail.png">
-      <!-- <meta name="twitter:image" content="https://github.com/christian-post/just-another-farming-sim/blob/main/assets/images/other/thumbnail.png?raw=false"> -->
+      <meta name="twitter:image" content="https://github.com/christian-post/just-another-farming-sim/blob/main/assets/images/other/thumbnail.png?raw=false">
 
       
       <title>Just Another Farming Sim</title>
