--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <script src="src/sprites.js"></script>
       <script src="src/utils.js"></script>
       <script src="src/user-interface.js"></script>
+      <script src="src/callbacks.js"></script>
 
   </head>
   <body>
