watering crops now possible

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       
       <!-- MISC -->
       <script src="src/sprites.js"></script>
+      <script src="src/game-objects.js"></script>
       <script src="src/utils.js"></script>
       <script src="src/user-interface.js"></script>
       <script src="src/callbacks.js"></script>
