Scene transition working

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <script src="src/scenes/scene-title.js"></script>
       <script src="src/scenes/scene-playtest.js"></script>
       <script src="src/scenes/scene-inventory.js"></script>
+      <script src="src/scenes/scene-transition.js"></script>
       
       <!-- MISC -->
       <script src="src/sprites.js"></script>
