--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
       <script src="src/user-interface.js"></script>
       <script src="src/callbacks.js"></script>
 
+      <!-- <link rel="preload" as="font" href="assets/fonts/slkscr.ttf" type="font/ttf" /> -->
+
   </head>
   <body>
     <script src="src/main.js"></script>
