--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <script src="src/scenes/scene-preload.js"></script>
       <script src="src/scenes/scene-title.js"></script>
       <script src="src/scenes/scene-playtest.js"></script>
+      <script src="src/scenes/scene-overworld.js"></script>
       <script src="src/scenes/scene-inventory.js"></script>
       <script src="src/scenes/scene-transition.js"></script>
       
