--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <script src="phaser/phaser.js"></script>
       <script src="plugins/rexuiplugin.min.js"></script>
       <script src="plugins/phaser-plugin-scene-watcher.umd.js"></script>
+      <script src="plugins/easystar-0.4.4.js"></script>
 
       <!-- SCENES -->
       <script src="src/scenes/scene-manager.js"></script>
