--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       <script src="src/scenes/scene-overworld.js"></script>
       <script src="src/scenes/scene-inventory.js"></script>
       <script src="src/scenes/scene-transition.js"></script>
+      <script src="src/scenes/scene-weather.js"></script>
       
       <!-- MISC -->
       <script src="src/sprites.js"></script>
