--- a/index.html
+++ b/index.html
@@ -28,28 +28,9 @@
       <script src="plugins/phaser-plugin-scene-watcher.umd.js"></script>
       <script src="plugins/easystar-0.4.4.js"></script>
 
-      <!-- SCENES -->
-      <script src="src/scenes/scene-manager.js"></script>
-      <script src="src/scenes/scene-preload.js"></script>
-      <script src="src/scenes/scene-title.js"></script>
-      <script src="src/scenes/scene-playtest.js"></script>
-      <script src="src/scenes/scene-overworld.js"></script>
-      <script src="src/scenes/scene-inventory.js"></script>
-      <script src="src/scenes/scene-transition.js"></script>
-      <script src="src/scenes/scene-weather.js"></script>
-      
-      <!-- MISC -->
-      <script src="src/sprites.js"></script>
-      <script src="src/game-objects.js"></script>
-      <script src="src/utils.js"></script>
-      <script src="src/user-interface.js"></script>
-      <script src="src/callbacks.js"></script>
-
-      <!-- <link rel="preload" as="font" href="assets/fonts/slkscr.ttf" type="font/ttf" /> -->
-
   </head>
   <body>
-    <script src="src/main.js"></script>
+    <script src="src/main.js" type="module"></script>
     <div id="test"></div>
   </body>
 </html>
